; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-vth264/extr_encoder.c_create_pixbuf_spec.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-vth264/extr_encoder.c_create_pixbuf_spec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vt_h264_encoder = type { i32, i32, i32 }

@kCFAllocatorDefault = common dso_local global i32 0, align 4
@kCFTypeDictionaryKeyCallBacks = common dso_local global i32 0, align 4
@kCFTypeDictionaryValueCallBacks = common dso_local global i32 0, align 4
@kCFNumberSInt32Type = common dso_local global i32 0, align 4
@kCVPixelBufferPixelFormatTypeKey = common dso_local global i32 0, align 4
@kCVPixelBufferWidthKey = common dso_local global i32 0, align 4
@kCVPixelBufferHeightKey = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vt_h264_encoder*)* @create_pixbuf_spec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_pixbuf_spec(%struct.vt_h264_encoder* %0) #0 {
  %2 = alloca %struct.vt_h264_encoder*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.vt_h264_encoder* %0, %struct.vt_h264_encoder** %2, align 8
  %5 = load i32, i32* @kCFAllocatorDefault, align 4
  %6 = call i32 @CFDictionaryCreateMutable(i32 %5, i32 3, i32* @kCFTypeDictionaryKeyCallBacks, i32* @kCFTypeDictionaryValueCallBacks)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @kCFNumberSInt32Type, align 4
  %8 = load %struct.vt_h264_encoder*, %struct.vt_h264_encoder** %2, align 8
  %9 = getelementptr inbounds %struct.vt_h264_encoder, %struct.vt_h264_encoder* %8, i32 0, i32 2
  %10 = call i32 @CFNumberCreate(i32* null, i32 %7, i32* %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @kCVPixelBufferPixelFormatTypeKey, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @CFDictionaryAddValue(i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @CFRelease(i32 %15)
  %17 = load i32, i32* @kCFNumberSInt32Type, align 4
  %18 = load %struct.vt_h264_encoder*, %struct.vt_h264_encoder** %2, align 8
  %19 = getelementptr inbounds %struct.vt_h264_encoder, %struct.vt_h264_encoder* %18, i32 0, i32 1
  %20 = call i32 @CFNumberCreate(i32* null, i32 %17, i32* %19)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %3, align 4
  %22 = load i32, i32* @kCVPixelBufferWidthKey, align 4
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @CFDictionaryAddValue(i32 %21, i32 %22, i32 %23)
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @CFRelease(i32 %25)
  %27 = load i32, i32* @kCFNumberSInt32Type, align 4
  %28 = load %struct.vt_h264_encoder*, %struct.vt_h264_encoder** %2, align 8
  %29 = getelementptr inbounds %struct.vt_h264_encoder, %struct.vt_h264_encoder* %28, i32 0, i32 0
  %30 = call i32 @CFNumberCreate(i32* null, i32 %27, i32* %29)
  store i32 %30, i32* %4, align 4
  %31 = load i32, i32* %3, align 4
  %32 = load i32, i32* @kCVPixelBufferHeightKey, align 4
  %33 = load i32, i32* %4, align 4
  %34 = call i32 @CFDictionaryAddValue(i32 %31, i32 %32, i32 %33)
  %35 = load i32, i32* %4, align 4
  %36 = call i32 @CFRelease(i32 %35)
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @CFDictionaryCreateMutable(i32, i32, i32*, i32*) #1

declare dso_local i32 @CFNumberCreate(i32*, i32, i32*) #1

declare dso_local i32 @CFDictionaryAddValue(i32, i32, i32) #1

declare dso_local i32 @CFRelease(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
